# gpl

./: .gitignore  Anchor.toml  Cargo.toml  Goki.toml  README.md  SECURITY.md  deploy.sh  package.json
programs/gpl_compression/: Cargo.toml  download-compression-program.sh
programs/gpl_compression/src/: errors.rs  events.rs  lib.rs  utils.rs
programs/gpl_compression/src/instructions/: comment.rs  connection.rs  mod.rs  post.rs  reaction.rs  tree_config.rs
programs/gpl_compression/src/state/: mod.rs
programs/gpl_core/: Cargo.toml
programs/gpl_core/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/gpl_core/src/instructions/: badge.rs  connection.rs  mod.rs  post.rs  profile.rs  profile_metadata.rs  profile_v2.rs  reaction.rs  user.rs
programs/gpl_core/src/state/: badge.rs  connection.rs  mod.rs  post.rs  profile.rs  profile_metadata.rs  reaction.rs  user.rs
programs/gpl_nameservice/: Cargo.toml
programs/gpl_nameservice/src/: lib.rs
programs/gpl_nameservice/src/nameservice/: ans.rs  gpl_nameservice.rs  mod.rs  nameservice_parser.rs  sns.rs
programs/gpl_session/: Cargo.toml  README.md
programs/gpl_session/macros/: Cargo.toml
programs/gpl_session/macros/attribute/: Cargo.toml
programs/gpl_session/macros/attribute/src/: lib.rs
programs/gpl_session/macros/src/: lib.rs
programs/gpl_session/src/: lib.rs
test_keys/: issuer_verify.json
tests/: connection.spec.ts  gpl.ts  post.spec.ts  profile.spec.ts  reaction.spec.ts  user.spec.ts
tests/gpl_compression/: comment.spec.ts  compression.spec.ts  connection.spec.ts  post.spec.ts  reaction.spec.ts
tests/gpl_core/: comment.spec.ts  connection.spec.ts  post.spec.ts  profile.spec.ts  profile_metadata.spec.ts  reaction.spec.ts  user.spec.ts
tests/utils/: index.ts
