[package]
name = "gpl-compression"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_compression"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
gpl-core = { version = "0.1.0", path = "../gpl_core", features = ["cpi"] }
solana-security-txt = "1.1.0"
spl-account-compression = {version = "0.1.7", features = ["cpi"]}
