[package]
name = "gpl-compression"
version = "0.1.1"
edition = "2021"
authors = ["Gum Core Dev <hello@gum.fun>"]
license = "GPL-3.0-or-later"
description = "Gum Compression Program (GPL Compression)"
repository = "https://github.com/gumhq/gpl"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_compression"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
gpl-core = { version = "1.0.0", path = "../gpl_core", features = ["cpi"] }
solana-security-txt = "1.1.0"
spl-account-compression = {version = "0.1.7", features = ["cpi"]}
