[package]
name = "gpl-core"
version = "1.0.0"
description = "Gum Protocol Core (GPL Core)"
edition = "2021"
authors = ["Gum Core Dev <hello@gum.fun>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/gumhq/gpl"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0" }
gpl-session = { version = "0.2.0", features = ["no-entrypoint"] }
gpl-nameservice = { version = "0.1.0", path = "../gpl_nameservice", features = ["no-entrypoint"] }
solana-security-txt = "1.1.0"
