[package]
name = "gpl-nameservice"
version = "0.1.0"
edition = "2021"
authors = ["Gum Core Dev <hello@gum.fun>"]
license = "GPL-3.0-or-later"
description = "Gum Nameservice Protocol (GPL Nameservice)"
repository = "https://github.com/gumhq/gpl"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_nameservice"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
