[package]
name = "gpl-session"
version = "0.2.0"
edition = "2021"
authors = ["Gum Core Dev <hello@gum.fun>"]
license = "GPL-3.0-or-later"
description = "Gum Session Protocol (GPL Session)"
repository = "https://github.com/gumhq/gpl"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_session"

[features]
no-entrypoint = ["gpl-session-macros"]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-security-txt = "1.1.0"
gpl-session-macros = { version = "0.1.0", path = "macros", optional = true }
