[package]
name = "gpl-session"
version = "1.0.0"
edition = "2021"
authors = ["Gum Core Dev <hello@gum.fun>"]
license = "GPL-3.0-or-later"
description = "Gum Session Protocol (GPL Session)"
repository = "https://github.com/gumhq/gpl"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_session"

[features]
no-entrypoint = ["gpl-session-macros"]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-security-txt = "1.1.0"
solana-program = "=1.14.17"
gpl-session-macros = { version = "0.1.0", path = "macros", optional = true }
